--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "yajra/laravel-datatables-buttons": "^10.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.15",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.27",
